optimize dependencies + replace opencsv with jackson